Add example of using score aggregation schemes

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -16,7 +16,7 @@
        " array([ True,  True, False, False, False]))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        "       0.        ])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
        "array([5, 4, 4, 1, 4, 6])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
        "         method6  0.000000"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,13 +175,13 @@
     "    ('file2.py', 'method5'),\n",
     "    ('file2.py', 'method6'),\n",
     "]\n",
-    "df = sbfl.to_frame(elements=elements, names=names)\n",
-    "df"
+    "score_df = sbfl.to_frame(elements=elements, names=names)\n",
+    "score_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>file2.py</th>\n",
-       "      <td>0.816497</td>\n",
+       "      <td>1.750000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -229,16 +229,18 @@
        "             score\n",
        "file              \n",
        "file1.py  0.333333\n",
-       "file2.py  0.816497"
+       "file2.py  1.750000"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.max(level='file')"
+    "from sbfl.score_aggregation import dense_rank_based_tie_aware_voting\n",
+    "\n",
+    "dense_rank_based_tie_aware_voting(score_df, 'file')"
    ]
   },
   {
@@ -250,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +441,7 @@
        "[778 rows x 5 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +455,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score_df = get_sbfl_scores_from_frame(cov_df, failing_tests=['test102'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -477,94 +488,135 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th></th>\n",
        "      <th>score</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>file</th>\n",
-       "      <th>line</th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">threading.c</th>\n",
-       "      <th>172</th>\n",
+       "      <th>atoms.c</th>\n",
+       "      <td>42.570357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bitmask.c</th>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hex_grammar.c</th>\n",
+       "      <td>17.897858</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hex_grammar.y</th>\n",
+       "      <td>5.070765</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hex_lexer.c</th>\n",
+       "      <td>37.720218</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hex_lexer.l</th>\n",
+       "      <td>5.102112</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>libyara.c</th>\n",
+       "      <td>4.360333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mem.c</th>\n",
+       "      <td>1.006231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>modules.c</th>\n",
+       "      <td>1.118034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>modules/elf.c</th>\n",
        "      <td>0.447214</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>175</th>\n",
+       "      <th>modules/hash.c</th>\n",
        "      <td>0.447214</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>178</th>\n",
+       "      <th>modules/math.c</th>\n",
        "      <td>0.447214</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>182</th>\n",
+       "      <th>modules/pe.c</th>\n",
        "      <td>0.447214</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>185</th>\n",
+       "      <th>modules/tests.c</th>\n",
        "      <td>0.447214</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
+       "      <th>modules/time.c</th>\n",
+       "      <td>0.447214</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">hex_lexer.l</th>\n",
-       "      <th>252</th>\n",
-       "      <td>0.577350</td>\n",
+       "      <th>re.c</th>\n",
+       "      <td>9.430054</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>253</th>\n",
-       "      <td>0.577350</td>\n",
+       "      <th>stack.c</th>\n",
+       "      <td>4.340196</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>254</th>\n",
-       "      <td>0.577350</td>\n",
+       "      <th>strutils.c</th>\n",
+       "      <td>1.732051</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>256</th>\n",
-       "      <td>0.577350</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>262</th>\n",
-       "      <td>0.577350</td>\n",
+       "      <th>threading.c</th>\n",
+       "      <td>1.248171</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>778 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                     score\n",
-       "file        line          \n",
-       "threading.c 172   0.447214\n",
-       "            175   0.447214\n",
-       "            178   0.447214\n",
-       "            182   0.447214\n",
-       "            185   0.447214\n",
-       "...                    ...\n",
-       "hex_lexer.l 252   0.577350\n",
-       "            253   0.577350\n",
-       "            254   0.577350\n",
-       "            256   0.577350\n",
-       "            262   0.577350\n",
-       "\n",
-       "[778 rows x 1 columns]"
+       "file                      \n",
+       "atoms.c          42.570357\n",
+       "bitmask.c         0.000000\n",
+       "hex_grammar.c    17.897858\n",
+       "hex_grammar.y     5.070765\n",
+       "hex_lexer.c      37.720218\n",
+       "hex_lexer.l       5.102112\n",
+       "libyara.c         4.360333\n",
+       "mem.c             1.006231\n",
+       "modules.c         1.118034\n",
+       "modules/elf.c     0.447214\n",
+       "modules/hash.c    0.447214\n",
+       "modules/math.c    0.447214\n",
+       "modules/pe.c      0.447214\n",
+       "modules/tests.c   0.447214\n",
+       "modules/time.c    0.447214\n",
+       "re.c              9.430054\n",
+       "stack.c           4.340196\n",
+       "strutils.c        1.732051\n",
+       "threading.c       1.248171"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_sbfl_scores_from_frame(cov_df, failing_tests=['test102'])"
+    "from sbfl.score_aggregation import dense_rank_based_suspiciousness_aware_voting\n",
+    "\n",
+    "dense_rank_based_suspiciousness_aware_voting(score_df, 'file')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
