Read function info from gcov files

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -16,7 +16,7 @@
        " array([ True,  True, False, False, False]))"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        "       0.        ])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
        "array([5, 4, 4, 1, 4, 6])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
        "         method6  0.000000"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "file2.py  1.750000"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -285,9 +285,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5/5 [00:01<00:00,  3.79it/s]\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -310,6 +317,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th></th>\n",
+       "      <th></th>\n",
        "      <th>test100</th>\n",
        "      <th>test101</th>\n",
        "      <th>test102</th>\n",
@@ -318,6 +326,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>file</th>\n",
+       "      <th>function</th>\n",
        "      <th>line</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -329,6 +338,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">threading.c</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">NaN</th>\n",
        "      <th>172</th>\n",
        "      <td>12</td>\n",
        "      <td>12</td>\n",
@@ -371,6 +381,7 @@
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <th>...</th>\n",
+       "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -379,6 +390,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">hex_lexer.l</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">NaN</th>\n",
        "      <th>252</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -424,24 +436,24 @@
        "</div>"
       ],
       "text/plain": [
-       "                  test100  test101  test102  test103  test104\n",
-       "file        line                                             \n",
-       "threading.c 172        12       12       12       12       12\n",
-       "            175        12       12       12       12       12\n",
-       "            178        12       12       12       12       12\n",
-       "            182         8        8        8        8        8\n",
-       "            185         8        8        8        8        8\n",
-       "...                   ...      ...      ...      ...      ...\n",
-       "hex_lexer.l 252         1        1        1        0        0\n",
-       "            253         1        1        1        0        0\n",
-       "            254         1        1        1        0        0\n",
-       "            256         1        1        1        0        0\n",
-       "            262         1        1        1        0        0\n",
+       "                           test100  test101  test102  test103  test104\n",
+       "file        function line                                             \n",
+       "threading.c NaN      172        12       12       12       12       12\n",
+       "                     175        12       12       12       12       12\n",
+       "                     178        12       12       12       12       12\n",
+       "                     182         8        8        8        8        8\n",
+       "                     185         8        8        8        8        8\n",
+       "...                            ...      ...      ...      ...      ...\n",
+       "hex_lexer.l NaN      252         1        1        1        0        0\n",
+       "                     253         1        1        1        0        0\n",
+       "                     254         1        1        1        0        0\n",
+       "                     256         1        1        1        0        0\n",
+       "                     262         1        1        1        0        0\n",
        "\n",
        "[778 rows x 5 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,13 +461,13 @@
    "source": [
     "from sbfl.utils import gcov_files_to_frame, get_sbfl_scores_from_frame\n",
     "\n",
-    "cov_df = gcov_files_to_frame(gcov_files, only_covered=True)\n",
+    "cov_df = gcov_files_to_frame(gcov_files, only_covered=True, verbose=True)\n",
     "cov_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +612,7 @@
        "threading.c       1.248171"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,13 +622,6 @@
     "\n",
     "dense_rank_based_suspiciousness_aware_voting(score_df, 'file')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
