Support multi-level index in score aggregation

--- a/main.ipynb
+++ b/main.ipynb
@@ -110,11 +110,13 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th></th>\n",
+       "      <th></th>\n",
        "      <th>score</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>file</th>\n",
        "      <th>method</th>\n",
+       "      <th>line</th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -122,27 +124,31 @@
        "    <tr>\n",
        "      <th>file1.py</th>\n",
        "      <th>method1</th>\n",
+       "      <th>line1</th>\n",
        "      <td>0.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">file2.py</th>\n",
-       "      <th>method2</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">method1</th>\n",
+       "      <th>line1</th>\n",
+       "      <td>0.577350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>line2</th>\n",
+       "      <td>0.577350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">method2</th>\n",
+       "      <th>line3</th>\n",
+       "      <td>0.816497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>line4</th>\n",
        "      <td>0.577350</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>method3</th>\n",
-       "      <td>0.577350</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>method4</th>\n",
-       "      <td>0.816497</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>method5</th>\n",
-       "      <td>0.577350</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>method6</th>\n",
+       "      <th>line5</th>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -150,14 +156,14 @@
        "</div>"
       ],
       "text/plain": [
-       "                     score\n",
-       "file     method           \n",
-       "file1.py method1  0.333333\n",
-       "file2.py method2  0.577350\n",
-       "         method3  0.577350\n",
-       "         method4  0.816497\n",
-       "         method5  0.577350\n",
-       "         method6  0.000000"
+       "                           score\n",
+       "file     method  line           \n",
+       "file1.py method1 line1  0.333333\n",
+       "file2.py method1 line1  0.577350\n",
+       "                 line2  0.577350\n",
+       "         method2 line3  0.816497\n",
+       "                 line4  0.577350\n",
+       "         method3 line5  0.000000"
       ]
      },
      "execution_count": 5,
@@ -166,14 +172,14 @@
     }
    ],
    "source": [
-    "names = ['file', 'method']\n",
+    "names = ['file', 'method', 'line']\n",
     "elements = [\n",
-    "    ('file1.py', 'method1'),\n",
-    "    ('file2.py', 'method2'),\n",
-    "    ('file2.py', 'method3'),\n",
-    "    ('file2.py', 'method4'),\n",
-    "    ('file2.py', 'method5'),\n",
-    "    ('file2.py', 'method6'),\n",
+    "    ('file1.py', 'method1', 'line1'),\n",
+    "    ('file2.py', 'method1', 'line1'),\n",
+    "    ('file2.py', 'method1', 'line2'),\n",
+    "    ('file2.py', 'method2', 'line3'),\n",
+    "    ('file2.py', 'method2', 'line4'),\n",
+    "    ('file2.py', 'method3', 'line5'),\n",
     "]\n",
     "score_df = sbfl.to_frame(elements=elements, names=names)\n",
     "score_df"
@@ -205,31 +211,45 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th></th>\n",
        "      <th>score</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>file</th>\n",
+       "      <th>method</th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>file1.py</th>\n",
-       "      <td>0.333333</td>\n",
+       "      <th>method1</th>\n",
+       "      <td>0.111111</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>file2.py</th>\n",
-       "      <td>1.750000</td>\n",
+       "      <th rowspan=\"3\" valign=\"top\">file2.py</th>\n",
+       "      <th>method1</th>\n",
+       "      <td>0.577350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>method2</th>\n",
+       "      <td>1.105172</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>method3</th>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             score\n",
-       "file              \n",
-       "file1.py  0.333333\n",
-       "file2.py  1.750000"
+       "                     score\n",
+       "file     method           \n",
+       "file1.py method1  0.111111\n",
+       "file2.py method1  0.577350\n",
+       "         method2  1.105172\n",
+       "         method3  0.000000"
       ]
      },
      "execution_count": 6,
@@ -238,9 +258,9 @@
     }
    ],
    "source": [
-    "from sbfl.score_aggregation import dense_rank_based_tie_aware_voting\n",
+    "from sbfl.score_aggregation import dense_rank_based_suspiciousness_aware_voting\n",
     "\n",
-    "dense_rank_based_tie_aware_voting(score_df, 'file')"
+    "dense_rank_based_suspiciousness_aware_voting(score_df, ['file', 'method'])"
    ]
   },
   {
@@ -292,7 +312,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:01<00:00,  3.79it/s]\n"
+      "100%|██████████| 5/5 [00:01<00:00,  3.67it/s]\n"
      ]
     },
     {
@@ -618,10 +638,15 @@
     }
    ],
    "source": [
-    "from sbfl.score_aggregation import dense_rank_based_suspiciousness_aware_voting\n",
-    "\n",
-    "dense_rank_based_suspiciousness_aware_voting(score_df, 'file')"
+    "dense_rank_based_suspiciousness_aware_voting(score_df, ['file'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
