Add Ensemble class

--- a/main.ipynb
+++ b/main.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sbfl.base import SBFL\n",
+    "from sbfl.base import SBFL, Ensemble\n",
     "from scipy.stats import rankdata\n",
     "\n",
     "#   e1,e2,e3,e4,e5,e6\n",
@@ -264,6 +264,62 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ensemble"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.33333333, 0.57735027, 0.57735027, 0.81649658, 0.57735027,\n",
+       "       0.        ])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# single model\n",
+    "sbfl = SBFL(formula='Ochiai')\n",
+    "sbfl.fit_predict(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.4       , 0.58333333, 0.5       , 2.        , 0.58333333,\n",
+       "       0.33333333])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# multiple models\n",
+    "en = Ensemble()\n",
+    "en.add_localizer(SBFL(formula=\"Ochiai\"))\n",
+    "en.add_localizer(SBFL(formula=\"Op2\"))\n",
+    "en.fit_predict(X, y)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -272,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -305,14 +361,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:01<00:00,  3.67it/s]\n"
+      "100%|██████████| 5/5 [00:01<00:00,  3.90it/s]\n"
      ]
     },
     {
@@ -357,7 +413,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">threading.c</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">/home/workspace/libyara/threading.gcno,threading.c</th>\n",
        "      <th rowspan=\"5\" valign=\"top\">NaN</th>\n",
        "      <th>172</th>\n",
        "      <td>12</td>\n",
@@ -409,7 +465,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">hex_lexer.l</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">/home/workspace/libyara/hex_lexer.gcno,hex_lexer.l</th>\n",
        "      <th rowspan=\"5\" valign=\"top\">NaN</th>\n",
        "      <th>252</th>\n",
        "      <td>1</td>\n",
@@ -456,24 +512,80 @@
        "</div>"
       ],
       "text/plain": [
-       "                           test100  test101  test102  test103  test104\n",
-       "file        function line                                             \n",
-       "threading.c NaN      172        12       12       12       12       12\n",
-       "                     175        12       12       12       12       12\n",
-       "                     178        12       12       12       12       12\n",
-       "                     182         8        8        8        8        8\n",
-       "                     185         8        8        8        8        8\n",
-       "...                            ...      ...      ...      ...      ...\n",
-       "hex_lexer.l NaN      252         1        1        1        0        0\n",
-       "                     253         1        1        1        0        0\n",
-       "                     254         1        1        1        0        0\n",
-       "                     256         1        1        1        0        0\n",
-       "                     262         1        1        1        0        0\n",
+       "                                                                  test100  \\\n",
+       "file                                               function line            \n",
+       "/home/workspace/libyara/threading.gcno,threading.c NaN      172        12   \n",
+       "                                                            175        12   \n",
+       "                                                            178        12   \n",
+       "                                                            182         8   \n",
+       "                                                            185         8   \n",
+       "...                                                                   ...   \n",
+       "/home/workspace/libyara/hex_lexer.gcno,hex_lexer.l NaN      252         1   \n",
+       "                                                            253         1   \n",
+       "                                                            254         1   \n",
+       "                                                            256         1   \n",
+       "                                                            262         1   \n",
+       "\n",
+       "                                                                  test101  \\\n",
+       "file                                               function line            \n",
+       "/home/workspace/libyara/threading.gcno,threading.c NaN      172        12   \n",
+       "                                                            175        12   \n",
+       "                                                            178        12   \n",
+       "                                                            182         8   \n",
+       "                                                            185         8   \n",
+       "...                                                                   ...   \n",
+       "/home/workspace/libyara/hex_lexer.gcno,hex_lexer.l NaN      252         1   \n",
+       "                                                            253         1   \n",
+       "                                                            254         1   \n",
+       "                                                            256         1   \n",
+       "                                                            262         1   \n",
+       "\n",
+       "                                                                  test102  \\\n",
+       "file                                               function line            \n",
+       "/home/workspace/libyara/threading.gcno,threading.c NaN      172        12   \n",
+       "                                                            175        12   \n",
+       "                                                            178        12   \n",
+       "                                                            182         8   \n",
+       "                                                            185         8   \n",
+       "...                                                                   ...   \n",
+       "/home/workspace/libyara/hex_lexer.gcno,hex_lexer.l NaN      252         1   \n",
+       "                                                            253         1   \n",
+       "                                                            254         1   \n",
+       "                                                            256         1   \n",
+       "                                                            262         1   \n",
+       "\n",
+       "                                                                  test103  \\\n",
+       "file                                               function line            \n",
+       "/home/workspace/libyara/threading.gcno,threading.c NaN      172        12   \n",
+       "                                                            175        12   \n",
+       "                                                            178        12   \n",
+       "                                                            182         8   \n",
+       "                                                            185         8   \n",
+       "...                                                                   ...   \n",
+       "/home/workspace/libyara/hex_lexer.gcno,hex_lexer.l NaN      252         0   \n",
+       "                                                            253         0   \n",
+       "                                                            254         0   \n",
+       "                                                            256         0   \n",
+       "                                                            262         0   \n",
+       "\n",
+       "                                                                  test104  \n",
+       "file                                               function line           \n",
+       "/home/workspace/libyara/threading.gcno,threading.c NaN      172        12  \n",
+       "                                                            175        12  \n",
+       "                                                            178        12  \n",
+       "                                                            182         8  \n",
+       "                                                            185         8  \n",
+       "...                                                                   ...  \n",
+       "/home/workspace/libyara/hex_lexer.gcno,hex_lexer.l NaN      252         0  \n",
+       "                                                            253         0  \n",
+       "                                                            254         0  \n",
+       "                                                            256         0  \n",
+       "                                                            262         0  \n",
        "\n",
        "[778 rows x 5 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -529,79 +641,79 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>atoms.c</th>\n",
+       "      <th>/home/workspace/libyara/atoms.gcno,atoms.c</th>\n",
        "      <td>42.570357</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>bitmask.c</th>\n",
+       "      <th>/home/workspace/libyara/bitmask.gcno,bitmask.c</th>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>hex_grammar.c</th>\n",
+       "      <th>/home/workspace/libyara/hex_grammar.gcno,hex_grammar.c</th>\n",
        "      <td>17.897858</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>hex_grammar.y</th>\n",
+       "      <th>/home/workspace/libyara/hex_grammar.gcno,hex_grammar.y</th>\n",
        "      <td>5.070765</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>hex_lexer.c</th>\n",
+       "      <th>/home/workspace/libyara/hex_lexer.gcno,hex_lexer.c</th>\n",
        "      <td>37.720218</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>hex_lexer.l</th>\n",
+       "      <th>/home/workspace/libyara/hex_lexer.gcno,hex_lexer.l</th>\n",
        "      <td>5.102112</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>libyara.c</th>\n",
+       "      <th>/home/workspace/libyara/libyara.gcno,libyara.c</th>\n",
        "      <td>4.360333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>mem.c</th>\n",
+       "      <th>/home/workspace/libyara/mem.gcno,mem.c</th>\n",
        "      <td>1.006231</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>modules.c</th>\n",
+       "      <th>/home/workspace/libyara/modules.gcno,modules.c</th>\n",
        "      <td>1.118034</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>modules/elf.c</th>\n",
+       "      <th>/home/workspace/libyara/modules/elf.gcno,modules/elf.c</th>\n",
        "      <td>0.447214</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>modules/hash.c</th>\n",
+       "      <th>/home/workspace/libyara/modules/hash.gcno,modules/hash.c</th>\n",
        "      <td>0.447214</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>modules/math.c</th>\n",
+       "      <th>/home/workspace/libyara/modules/math.gcno,modules/math.c</th>\n",
        "      <td>0.447214</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>modules/pe.c</th>\n",
+       "      <th>/home/workspace/libyara/modules/pe.gcno,modules/pe.c</th>\n",
        "      <td>0.447214</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>modules/tests.c</th>\n",
+       "      <th>/home/workspace/libyara/modules/tests.gcno,modules/tests.c</th>\n",
        "      <td>0.447214</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>modules/time.c</th>\n",
+       "      <th>/home/workspace/libyara/modules/time.gcno,modules/time.c</th>\n",
        "      <td>0.447214</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>re.c</th>\n",
+       "      <th>/home/workspace/libyara/re.gcno,re.c</th>\n",
        "      <td>9.430054</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>stack.c</th>\n",
+       "      <th>/home/workspace/libyara/stack.gcno,stack.c</th>\n",
        "      <td>4.340196</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>strutils.c</th>\n",
+       "      <th>/home/workspace/libyara/strutils.gcno,strutils.c</th>\n",
        "      <td>1.732051</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>threading.c</th>\n",
+       "      <th>/home/workspace/libyara/threading.gcno,threading.c</th>\n",
        "      <td>1.248171</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -609,30 +721,30 @@
        "</div>"
       ],
       "text/plain": [
-       "                     score\n",
-       "file                      \n",
-       "atoms.c          42.570357\n",
-       "bitmask.c         0.000000\n",
-       "hex_grammar.c    17.897858\n",
-       "hex_grammar.y     5.070765\n",
-       "hex_lexer.c      37.720218\n",
-       "hex_lexer.l       5.102112\n",
-       "libyara.c         4.360333\n",
-       "mem.c             1.006231\n",
-       "modules.c         1.118034\n",
-       "modules/elf.c     0.447214\n",
-       "modules/hash.c    0.447214\n",
-       "modules/math.c    0.447214\n",
-       "modules/pe.c      0.447214\n",
-       "modules/tests.c   0.447214\n",
-       "modules/time.c    0.447214\n",
-       "re.c              9.430054\n",
-       "stack.c           4.340196\n",
-       "strutils.c        1.732051\n",
-       "threading.c       1.248171"
+       "                                                        score\n",
+       "file                                                         \n",
+       "/home/workspace/libyara/atoms.gcno,atoms.c          42.570357\n",
+       "/home/workspace/libyara/bitmask.gcno,bitmask.c       0.000000\n",
+       "/home/workspace/libyara/hex_grammar.gcno,hex_gr...  17.897858\n",
+       "/home/workspace/libyara/hex_grammar.gcno,hex_gr...   5.070765\n",
+       "/home/workspace/libyara/hex_lexer.gcno,hex_lexer.c  37.720218\n",
+       "/home/workspace/libyara/hex_lexer.gcno,hex_lexer.l   5.102112\n",
+       "/home/workspace/libyara/libyara.gcno,libyara.c       4.360333\n",
+       "/home/workspace/libyara/mem.gcno,mem.c               1.006231\n",
+       "/home/workspace/libyara/modules.gcno,modules.c       1.118034\n",
+       "/home/workspace/libyara/modules/elf.gcno,module...   0.447214\n",
+       "/home/workspace/libyara/modules/hash.gcno,modul...   0.447214\n",
+       "/home/workspace/libyara/modules/math.gcno,modul...   0.447214\n",
+       "/home/workspace/libyara/modules/pe.gcno,modules...   0.447214\n",
+       "/home/workspace/libyara/modules/tests.gcno,modu...   0.447214\n",
+       "/home/workspace/libyara/modules/time.gcno,modul...   0.447214\n",
+       "/home/workspace/libyara/re.gcno,re.c                 9.430054\n",
+       "/home/workspace/libyara/stack.gcno,stack.c           4.340196\n",
+       "/home/workspace/libyara/strutils.gcno,strutils.c     1.732051\n",
+       "/home/workspace/libyara/threading.gcno,threading.c   1.248171"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,13 +752,6 @@
    "source": [
     "dense_rank_based_suspiciousness_aware_voting(score_df, ['file'])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
